s/heading/landingHeading/ + whitespace fixes

--- a/src/common/containers/landing.css
+++ b/src/common/containers/landing.css
@@ -99,6 +99,6 @@
   padding-right: 0.9em;
 }
 
-.heading {
+.landingHeading {
   margin-bottom: 3rem;
 }
